fixing text alignment

--- a/styles/cf015818.main.css
+++ b/styles/cf015818.main.css
@@ -100,7 +100,6 @@ body {
     font-family: Alegreya, serif;
     font-size: 16px;
     margin-bottom: 0;
-    margin-right: 5px;
     padding-right: 5px
 }
 .item-border {
